feat: add query by bucket/object apis, enhance purchase search api (#7)
* feat: add query by bucket/object apis, enhance purchase search api
